type b 추가 및 수정사항 적용

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 					</li>
 					<li>
 						<strong>Type B</strong>
-						<span class="pic"><a href="type_b/index.html"><img src="type_a/images/img_type_b.png" alt=""></a></span>
+						<span class="pic"><a href="type_b/laptop_01.html"><img src="type_a/images/img_type_b.png" alt=""></a></span>
 						<div>
-							<a href="type_b/index.html" class="active">PC</a>
-							<a href="type_b/index_m.html">MOBILE</a>
+							<a href="type_b/laptop_01.html" class="active">PC</a>
+							<a href="type_b/mobile_01.html">MOBILE</a>
 						</div>
 					</li>
 					<li>
