--- a/type_a/sub.html
+++ b/type_a/sub.html
@@ -20,7 +20,7 @@
 
 	<div class="header hidden">
 		<div class="header-inner">
-			<div class="logo"><a href="#">현대건설 기술교육원</a></div>
+			<div class="logo"><a href="../index.html">현대건설 기술교육원</a></div>
 			<ul class="topmenu">
 				<li><a href="#">교육원소개</a></li>
 				<li><a href="#">교육과정</a></li>
@@ -37,7 +37,7 @@
 	</div>
 
 	<div class="contents sub">		
-		<div class="subvisual"><img src="images/common/img_subvisual.jpg" alt=""></div>
+		<div class="subvisual"><img src="images/common/img_subvisual.jpg" alt=""><h2>교육신청과정</h2></div>
 		<div class="sub-contents">
 			<fieldset>
 				<img src="images/common/img_subsearch.png" alt="">
