--- a/type_c/index.html
+++ b/type_c/index.html
@@ -19,13 +19,13 @@
 
 	<div class="header">
 		<div class="header-inner">
-			<div class="logo"><a href="index.html">현대건설 기술교육원</a></div>
+			<div class="logo"><a href="../index.html">현대건설 기술교육원</a></div>
 			<ul class="topmenu">
-				<li><a href="sub.html">교육원소개</a></li>
-				<li><a href="sub.html">교육과정</a></li>
-				<li><a href="sub.html">모집안내</a></li>
-				<li><a href="sub.html">커뮤니티</a></li>
-				<li><a href="sub.html">취업지원</a></li>
+				<li><a href="#">교육원소개</a></li>
+				<li><a href="#">교육과정</a></li>
+				<li><a href="#">모집안내</a></li>
+				<li><a href="#">커뮤니티</a></li>
+				<li><a href="#">취업지원</a></li>
 			</ul>
 			<ul class="gnb-util">
 				<li><button type="button" class="btn-gnb-search" title="검색">검색</button></li>
