--- a/type_a/index.html
+++ b/type_a/index.html
@@ -51,7 +51,7 @@
 							<h1>
 								<p class="ani-txt-wrap"><span><strong>변화와 혁신을 추진</strong>하는 </span></p>
 								<p class="ani-txt-wrap"><span><strong>건설기술 인재를</span></p>
-								<p class="ani-txt-wrap"><span><strong>양성합니다</span></p>
+								<p class="ani-txt-wrap"><span><strong>양성</strong>합니다</span></p>
 							</h1>
 							<div class="bg-img"><img src="images/main/img_mainvisual_01.jpg" alt=""></div>
 						</li>
